# cli-runner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.local/: claude_plan.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_RESET_PLAN.md  ROADMAP.md  TESTING.md  USER_GUIDE.md
src/cli_ai_runner/: __init__.py  main.py  runner.py  setup_agent.py  utils.py
src/cli_ai_runner/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/cli_orchestrator_ui/: __init__.py  main.py  runner.py
src/cli_orchestrator_ui/broker/: codexmem.py  engine.py
src/cli_runner/: __init__.py  main.py  models.py  runner.py  setup_agent.py  utils.py
src/cli_runner/adapters/: __init__.py  claude.py  codex.py  gemini.py
src/cli_runner/broker/: __init__.py  engine.py
tests/: conftest.py  repro_ansi.py  test_ansi_cleanup.py  test_broker_continuation_logic.py  test_broker_engine.py  test_broker_integration.py  test_broker_pty.py  test_codexmem_bridge.py  test_command_resolution.py  test_engine_state_detection.py  test_main.py  test_runner.py  test_setup_agent.py
tests/adapters/: test_claude_adapter.py  test_codex_adapter.py  test_gemini_adapter.py
tests/fixtures/: fake_agent.py
