[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-ai-runner"
version = "1.0.2"
description = "Agent-agnostic CLI runner with loop control for Codex, Gemini, and Claude."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "cli-ai-runner Contributors"}
]
requires-python = ">=3.11"
dependencies = [
  "pywinpty>=3.0.3; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "build",
]

[project.scripts]
cli-ai-runner = "cli_ai_runner.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/cli_ai_runner --cov-report=term-missing --cov-fail-under=85"
